YTI-469: Fix concept selection modal overlapping things, mainly concerning IE.

--- a/src/app/components/terminology-integration/terminology-integration-codescheme-modal.component.scss
+++ b/src/app/components/terminology-integration/terminology-integration-codescheme-modal.component.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+
+  .fixed-height-section {
+    flex: 0 0 auto;
+  }
 }
 
 .scrolling-full-height {
